# name: TestInsight.test_listing_insights_does_not_nplus1
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.10
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."insight_id" = 2 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.11
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."insight_id" = 2 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.12
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  WHERE "posthog_dashboardtile"."insight_id" = 2 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.13
  '
  SELECT "posthog_tag"."name"
  FROM "posthog_taggeditem"
  INNER JOIN "posthog_tag" ON ("posthog_taggeditem"."tag_id" = "posthog_tag"."id")
  WHERE "posthog_taggeditem"."insight_id" = 2 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.14
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.15
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.16
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.17
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.18
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.19
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  WHERE ("posthog_dashboarditem"."team_id" = 2
         AND NOT "posthog_dashboarditem"."deleted"
         AND NOT "posthog_dashboarditem"."deleted") /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.20
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags",
         "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config",
         T4."id",
         T4."password",
         T4."last_login",
         T4."first_name",
         T4."last_name",
         T4."is_staff",
         T4."is_active",
         T4."date_joined",
         T4."uuid",
         T4."current_organization_id",
         T4."current_team_id",
         T4."email",
         T4."temporary_token",
         T4."distinct_id",
         T4."email_opt_in",
         T4."partial_notification_settings",
         T4."anonymize_data",
         T4."toolbar_mode",
         T4."events_column_config"
  FROM "posthog_dashboarditem"
  INNER JOIN "posthog_team" ON ("posthog_dashboarditem"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_dashboarditem"."created_by_id" = "posthog_user"."id")
  LEFT OUTER JOIN "posthog_user" T4 ON ("posthog_dashboarditem"."last_modified_by_id" = T4."id")
  WHERE ("posthog_dashboarditem"."team_id" = 2
         AND NOT "posthog_dashboarditem"."deleted"
         AND NOT "posthog_dashboarditem"."deleted")
  ORDER BY "posthog_dashboarditem"."order" ASC
  LIMIT 100 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.21
  '
  SELECT "posthog_taggeditem"."id",
         "posthog_taggeditem"."tag_id",
         "posthog_taggeditem"."dashboard_id",
         "posthog_taggeditem"."insight_id",
         "posthog_taggeditem"."event_definition_id",
         "posthog_taggeditem"."property_definition_id",
         "posthog_taggeditem"."action_id",
         "posthog_tag"."id",
         "posthog_tag"."name",
         "posthog_tag"."team_id"
  FROM "posthog_taggeditem"
  INNER JOIN "posthog_tag" ON ("posthog_taggeditem"."tag_id" = "posthog_tag"."id")
  WHERE "posthog_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */) /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.22
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE (NOT ("posthog_dashboardtile"."deleted"
              AND "posthog_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("posthog_dashboard"."deleted")
         AND "posthog_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */)) /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.23
  '
  SELECT "posthog_taggeditem"."id",
         "posthog_taggeditem"."tag_id",
         "posthog_taggeditem"."dashboard_id",
         "posthog_taggeditem"."insight_id",
         "posthog_taggeditem"."event_definition_id",
         "posthog_taggeditem"."property_definition_id",
         "posthog_taggeditem"."action_id"
  FROM "posthog_taggeditem"
  WHERE "posthog_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */) /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.3
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.4
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."text_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboardtile"."deleted",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.5
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.6
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.7
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.8
  '
  
  INSERT INTO posthog_insightcachingstate AS state (id, team_id, insight_id, dashboard_tile_id, cache_key, target_cache_age_seconds, created_at, updated_at, refresh_attempt)
  VALUES ('018544d9-6b50-0001-fe50-7d371876f85f'::uuid, 1892, 1588, NULL, 'cache_9902bd7f8e4ed6f7418e12e0a6172e9d', NULL, '2022-12-24T15:56:17.616953+00:00'::timestamptz, '2022-12-24T15:56:17.616953+00:00'::timestamptz, 0) ON CONFLICT (insight_id, coalesce(dashboard_tile_id, -1)) DO
  UPDATE
  SET last_refresh =
    (SELECT CASE
                WHEN state.cache_key != EXCLUDED.cache_key THEN NULL
                ELSE state.last_refresh
            END AS new_last_refresh),
      last_refresh_queued_at =
    (SELECT CASE
                WHEN state.cache_key != EXCLUDED.cache_key THEN NULL
                ELSE state.last_refresh_queued_at
            END AS new_last_refresh_queued_at),
      refresh_attempt =
    (SELECT CASE
                WHEN state.cache_key != EXCLUDED.cache_key THEN 0
                ELSE state.refresh_attempt
            END AS new_refresh_attempt),
      cache_key = EXCLUDED.cache_key,
      target_cache_age_seconds = EXCLUDED.target_cache_age_seconds,
      updated_at = EXCLUDED.updated_at /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
# name: TestInsight.test_listing_insights_does_not_nplus1.9
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='project_insights-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/insights/%3F%24'*/
  '
---
